Fixed card spillout

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   background-image: url('https://cdn.pixabay.com/photo/2015/05/15/14/52/water-768745_960_720.jpg');
   background-size: cover;
 }
-.card-body{
+.btn{
   margin-bottom: -5vh;
+}
+.card-spillout{
+  margin-bottom: -10vh;
 }
